# rust-web-projects

./: README.md
diesel_blog/: .env  Cargo.toml
diesel_blog/migrations/2021-06-26-130551_diesel_blog_initial_schema/: up.sql
diesel_blog/src/: db.rs  db_access.rs  errors.rs  lib.rs  main.rs  model.rs  schema.rs
tmp/: lib.rs
warp_auth/: Cargo.toml  login.http  register.http
warp_auth/src/: main.rs
web_crawler/: Cargo.toml
web_crawler/src/: main.rs
