[package]
name = "diesel_blog"
version = "0.1.0"
authors = ["Paul Tuck <pau1tuck@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.7.1", features = ["macros"] }
warp = "0.3.1"
diesel = { version = "1.4.4", features = ["postgres", "r2d2"] }
serde_derive = "1.0.126"
serde = "1.0"
log = "0.4"
pretty_env_logger = "0.4.0"