[package]
name = "warp_auth"
version = "0.1.0"
authors = ["Paul Tuck <pau1tuck@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3"
tokio = { version = "1", features = ["full"] } # polls Futures
serde = { version = "1.0", features = ["derive"] }
