[package]
name = "web_crawler"
version = "0.1.0"
authors = ["Paul Tuck <pau1tuck@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
select = "0.5.0"